Fix spacing issue for the whole page

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,13 @@
-html {
-    height: 100%;
-}
-
 body {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:space-between;
+    justify-content: space-between;
     margin: 0;
     background-image: linear-gradient(rgb(43, 247, 219), rgb(68, 210, 235));
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
 }
 
 #calculator {
@@ -19,7 +15,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     border: 2px solid;
-    margin-top: 80px;
+    margin-top: 100px;
     margin-bottom: 20px;
     border-radius: 15px;
     box-shadow: 5px 5px;
